--- a/partyboard/www/index.html
+++ b/partyboard/www/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
@@ -21,9 +21,37 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
-  </head>
+</head>
 
-  <body ng-app="starter">
-    <ion-nav-view></ion-nav-view>
-  </body>
+<body ng-app="main">
+
+<!--
+<ion-modal-view>
+    <ion-header-bar>
+        <h1 class="title">Login</h1>
+    </ion-header-bar>
+    <ion-content>
+        <form ng-submit="doLogin()">
+            <div class="list">
+                <label class="item item-input">
+                    <span class="input-label">Username</span>
+                    <input type="text" ng-model="loginData.username">
+                </label>
+                <label class="item item-input">
+                    <span class="input-label">Password</span>
+                    <input type="password" ng-model="loginData.password">
+                </label>
+                <label class="item">
+                    <button class="button button-block button-balanced" type="submit">Log in</button>
+                </label>
+            </div>
+        </form>
+        <label class="item">
+            <a href="#/app/main" class="button button-block button-positive">Facebook</a>
+        </label>
+    </ion-content>
+</ion-modal-view>
+-->
+<ion-nav-view></ion-nav-view>
+</body>
 </html>
