--- a/partyboard/www/index.html
+++ b/partyboard/www/index.html
@@ -13,8 +13,8 @@
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
-    <!-- cordova script (this will be a 404 during development) -->
-    <script src="cordova.js"></script>
+    <!-- translate -->
+    <script src="js/external/angular-translate.min.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
