--- a/partyboard/www/index.html
+++ b/partyboard/www/index.html
@@ -15,6 +15,7 @@
 
     <!-- translate -->
     <script src="js/external/angular-translate.min.js"></script>
+    <script src="js/dictionary.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
@@ -23,6 +24,9 @@
     <script src="js/services/user.js"></script>
     <script src="js/controllers/login.js"></script>
     <script src="js/services/modalService.js"></script>
+
+    <!-- Nastaveni -->
+    <script src="js/controllers/setting.js"></script>
 </head>
 
 <body ng-app="app">
