jazyk + pripojeni k internetu

--- a/partyboard/www/index.html
+++ b/partyboard/www/index.html
@@ -13,12 +13,18 @@
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
-    <!-- translate -->
-    <script src="js/external/angular-translate.min.js"></script>
-    <script src="js/dictionary.js"></script>
+    <!-- ng-cordova -->
+    <script src="js/external/ng-cordova.min.js"></script>
+
+    <!-- cordova script (this will be a 404 during development) -->
+    <script src="cordova.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+
+    <!-- translate -->
+    <script src="js/external/angular-translate.min.js"></script>
+    <script src="js/dictionary.js"></script>
 
     <!-- Prihlaseni -->
     <script src="js/services/user.js"></script>
