vytvoreni service pro overeni pripojeni + dalsi upravy okolo toho

--- a/partyboard/www/index.html
+++ b/partyboard/www/index.html
@@ -31,6 +31,9 @@
     <script src="js/controllers/login.js"></script>
     <script src="js/services/modalService.js"></script>
 
+    <!-- Networkservice -->
+    <script src="js/services/network.js"></script>
+
     <!-- Nastaveni -->
     <script src="js/controllers/setting.js"></script>
 </head>
