pridani modalniho okna pro registraci + uprava oken(prevod na modalni)

--- a/partyboard/www/index.html
+++ b/partyboard/www/index.html
@@ -34,6 +34,18 @@
     <!-- Networkservice -->
     <script src="js/services/network.js"></script>
 
+    <!-- Menu -->
+    <script src="js/controllers/menu.js"></script>
+
+    <!-- Info -->
+    <script src="js/controllers/info.js"></script>
+
+    <!--  Partyboard -->
+    <script src="js/controllers/partyboard.js"></script>
+
+    <!-- Registrace -->
+    <script src="js/controllers/registration.js"></script>
+
     <!-- Nastaveni -->
     <script src="js/controllers/setting.js"></script>
 </head>
