--- a/partyboard/www/index.html
+++ b/partyboard/www/index.html
@@ -34,6 +34,9 @@
     <!-- Networkservice -->
     <script src="js/services/network.js"></script>
 
+    <!-- SMS -->
+    <script src="js/services/sendSMS.js"></script>
+
     <!-- Menu -->
     <script src="js/controllers/menu.js"></script>
 
