moznost nastaveni barvy

--- a/partyboard/www/index.html
+++ b/partyboard/www/index.html
@@ -51,6 +51,9 @@
 
     <!-- Nastaveni -->
     <script src="js/controllers/setting.js"></script>
+
+    <!-- Colors -->
+    <script src="js/services/color.js"></script>
 </head>
 
 <body ng-app="app">
