--- a/partyboard/www/index.html
+++ b/partyboard/www/index.html
@@ -26,34 +26,21 @@
     <script src="js/external/angular-translate.min.js"></script>
     <script src="js/dictionary.js"></script>
 
-    <!-- Prihlaseni -->
-    <script src="js/services/user.js"></script>
-    <script src="js/controllers/login.js"></script>
-    <script src="js/services/modalService.js"></script>
+    <!-- Service/factory -->
+    <script src="js/services/UserFactory.js"></script>
+    <script src="js/services/ModalService.js"></script>
+    <script src="js/services/NetworkService.js"></script>
+    <script src="js/services/ColorFactory.js"></script>
+    <script src="js/services/SendSMSService.js"></script>
 
-    <!-- Networkservice -->
-    <script src="js/services/network.js"></script>
+    <!-- Controllers -->
+    <script src="js/controllers/MenuController.js"></script>
+    <script src="js/controllers/InfoController.js"></script>
+    <script src="js/controllers/PartyboardController.js"></script>
+    <script src="js/controllers/RegistrationController.js"></script>
+    <script src="js/controllers/SettingController.js"></script>
+    <script src="js/controllers/LoginController.js"></script>
 
-    <!-- SMS -->
-    <script src="js/services/sendSMS.js"></script>
-
-    <!-- Menu -->
-    <script src="js/controllers/menu.js"></script>
-
-    <!-- Info -->
-    <script src="js/controllers/info.js"></script>
-
-    <!--  Partyboard -->
-    <script src="js/controllers/partyboard.js"></script>
-
-    <!-- Registrace -->
-    <script src="js/controllers/registration.js"></script>
-
-    <!-- Nastaveni -->
-    <script src="js/controllers/setting.js"></script>
-
-    <!-- Colors -->
-    <script src="js/services/color.js"></script>
 </head>
 
 <body ng-app="app">
