--- a/partyboard/www/index.html
+++ b/partyboard/www/index.html
@@ -32,6 +32,7 @@
     <script src="js/services/NetworkService.js"></script>
     <script src="js/services/ColorFactory.js"></script>
     <script src="js/services/SendSMSService.js"></script>
+    <script src="js/services/SendInternetFactory.js"></script>
 
     <!-- Controllers -->
     <script src="js/controllers/MenuController.js"></script>
