nacitani zprav z netu

--- a/partyboard/www/index.html
+++ b/partyboard/www/index.html
@@ -33,6 +33,7 @@
     <script src="js/services/ColorFactory.js"></script>
     <script src="js/services/SendSMSService.js"></script>
     <script src="js/services/SendInternetFactory.js"></script>
+    <script src="js/services/MessageService.js"></script>
 
     <!-- Controllers -->
     <script src="js/controllers/MenuController.js"></script>
