--- a/partyboard/www/index.html
+++ b/partyboard/www/index.html
@@ -42,6 +42,7 @@
     <script src="js/controllers/RegistrationController.js"></script>
     <script src="js/controllers/SettingController.js"></script>
     <script src="js/controllers/LoginController.js"></script>
+    <script src="js/controllers/AdministrationController.js"></script>
 
 </head>
 
