--- a/partyboard/www/index.html
+++ b/partyboard/www/index.html
@@ -34,6 +34,8 @@
     <script src="js/services/SendSMSService.js"></script>
     <script src="js/services/SendInternetFactory.js"></script>
     <script src="js/services/MessageService.js"></script>
+    <script src="js/services/RestService.js"></script>
+    <script src="js/services/SettingFactory.js"></script>
 
     <!-- Controllers -->
     <script src="js/controllers/MenuController.js"></script>
