oprava user, slovniku, pridani servisi pro ban

--- a/partyboard/www/index.html
+++ b/partyboard/www/index.html
@@ -36,6 +36,7 @@
     <script src="js/services/MessageService.js"></script>
     <script src="js/services/RestService.js"></script>
     <script src="js/services/SettingFactory.js"></script>
+    <script src="js/services/BanService.js"></script>
 
     <!-- Controllers -->
     <script src="js/controllers/MenuController.js"></script>
