--- a/partyboard/www/index.html
+++ b/partyboard/www/index.html
@@ -26,6 +26,9 @@
     <script src="js/external/angular-translate.min.js"></script>
     <script src="js/dictionary.js"></script>
 
+    <!-- sha1 -->
+    <script src="js/external/sha1.js"></script>
+
     <!-- Service/factory -->
     <script src="js/services/UserFactory.js"></script>
     <script src="js/services/ModalService.js"></script>
