--- a/partyboard/www/index.html
+++ b/partyboard/www/index.html
@@ -41,6 +41,7 @@
     <script src="js/services/RestService.js"></script>
     <script src="js/services/SettingFactory.js"></script>
     <script src="js/services/BanService.js"></script>
+    <script src="js/services/BackButtonFactory.js"></script>
 
     <!-- Controllers -->
     <script src="js/controllers/MenuController.js"></script>
