--- a/partyboard/www/index.html
+++ b/partyboard/www/index.html
@@ -51,6 +51,7 @@
     <script src="js/controllers/SettingController.js"></script>
     <script src="js/controllers/LoginController.js"></script>
     <script src="js/controllers/AdministrationController.js"></script>
+    <script src="js/controllers/ShowController.js"></script>
 
 </head>
 
