--- a/partyboard/www/index.html
+++ b/partyboard/www/index.html
@@ -52,6 +52,7 @@
     <script src="js/controllers/LoginController.js"></script>
     <script src="js/controllers/AdministrationController.js"></script>
     <script src="js/controllers/ShowController.js"></script>
+    <script src="js/controllers/UsersBanController.js"></script>
 
 </head>
 
